slideshow-0.4.0
---------------

	* [daemon] proper mysql browser.
	* [frontend] Bypass delete confirmation by holding shift.
	* [frontend] Preview using ajax.
	* [frontend] Render checkerboard pattern for background instead of solid
	             color to distinguish alpha.
	* [frontend] Search for themes in multiple directories.
	* [frontend] Configuration split into sections.
	* [frontend] Support for IP whitelisting.
	* [frontend] Support for additional setting types (checkboxes, textarea,
	             etc)
	* [frontend] Database migration handling
	* [frontend] folds fieldsets on upload screen so users don't
	             accidentally press the wrong button.
	* [frontend] delete slide with js.
	* [frontend] javascript refactoring.
	* [frontend] officially requiring javascript to use frontend.
	* [frontend] updated to latest stable jquery.

2012-03-25; David Sveningsson <ext@sidvind.com>
	* [frontend] added support for theme-folder

2011-01-29; David Sveningsson <ext@sidvind.com>
	* [daemon] Reimplementing support for video playback, this time as proper
	slides and mplayer using slave mode.
	* [frontend] Better exception when it fails to execute ImageMagick convert.

2011-01-19; David Sveningsson <ext@sidvind.com>
	* [daemon] Checking for NULL browser-string, so it doesn't crash if no
	browser is provided.

2011-01-16; David Sveningsson <ext@sidvind.com
	* [frontend] Always logging to `slideshow.log`.
	* [frontend] Adding --switch to allow user to switch BasePath, e.g. moving
	installation.
	* [frontend] Making it a fatal error if not passing a config-file, so it
	doesn't crash with unrelated errors.
	* [daemon] renaming `collection_id` to `queue_id` so it is consistent
	across codebase. Adding a new flag `--queue-id`, but keeping old flag for
	backward compability.
	* [daemon] Adding `--fullscreen` and `--foreground` flags for symmetry.
	* [daemon] Adding `--file-log` flag to log to file.
	* [daemon] Rewriting launcher script.
